Garbage time now. Nothing works.

--- a/app/popup.html
+++ b/app/popup.html
@@ -18,6 +18,10 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+<script src="scripts/u2f-api.js"></script>
+<script src="scripts/ecc.js"></script>
+<script src="scripts/asn1.js"></script>
+<script src="scripts/u2f-test.js"></script>
     <!-- build:js scripts/popup.js -->
     <script src="scripts/popup.js"></script>
     <!-- endbuild -->
